objects/ServiceContract.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Caliper Service Contract Opportunity legacy id for reference purposes only.  Remove after 1 year or less.</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>System_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link contract to System ID if applicable</description>
        <label>System Id</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Date contract PO expected - used by LST Service contract sales</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_PO__c</fullName>
        <description>Service contract customer PO #</description>
        <label>Contract PO #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <formula>Contact.MailingCity &amp; &quot;, &quot; &amp;  Contact.MailingState &amp;&quot; &quot; &amp; Contact.MailingPostalCode</formula>
        <label>Contact City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clone_From_ID__c</fullName>
        <description>A hidden field to be used with Clone with Line Items button.</description>
        <label>Clone From ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>LST Service Contract sales, measure Warranty. Renewals, New Business</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty Conversion</fullName>
                </value>
                <value>
                    <fullName>Contract Renewal</fullName>
                </value>
                <value>
                    <fullName>New Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Stage__c</fullName>
        <description>LST Service Contract sales process</description>
        <inlineHelpText>&gt; Stage 5  = Rev Fcst</inlineHelpText>
        <label>Contract Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stage 1 - Qualification</fullName>
                </value>
                <value>
                    <fullName>Stage 2 - Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Stage 3 - Solution Differentiation</fullName>
                </value>
                <value>
                    <fullName>Stage 4 - Objection Handling</fullName>
                </value>
                <value>
                    <fullName>Stage 5 - Preferred</fullName>
                </value>
                <value>
                    <fullName>Stage 6 - Negotiating/Forecast</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Order_No__c</fullName>
        <description>Sales Order for Contract LST</description>
        <label>Sales Order No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clone_Line_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field to be used with Clone with Line Items button.</description>
        <label>Clone Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <formula>Contact.Phone</formula>
        <label>Contact Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mailling_Address__c</fullName>
        <formula>Contact.MailingStreet</formula>
        <label>Contact Mailling Address</label>
        <type>Text</type>
    </fields>
</CustomObject>